Include config parameters for http basic auth

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -18,3 +18,6 @@ chartmuseum_cache_store: ""
 chartmuseum_cache_redis_addr: ""
 chartmuseum_cache_redis_password: ""
 chartmuseum_cache_redis_db: ""
+chartmuseum_basicauth_user: ""
+chartmuseum_basicauth_password: ""
+chartmuseum_basicauth_anonymousget: ""
